--- a/statics/posts.html
+++ b/statics/posts.html
@@ -16,8 +16,8 @@ po();
 }
 function posts(p){
 return '<div class="panel panel-default">\
-<div class="panel-heading text-center">\
-<p><strong>标题：'+p.title+'</strong></p><p><small>作者:'+p.author+'</small></p>\
+<div class="panel-heading">\
+<p><strong>标题：'+p.title+'</strong><small class="pull-right">作者:'+p.author+'</small></p>\
 </div>\
 <div class="panel-body"><p>'+p.content+'</p>\
 </div>\
