--- a/statics/posts.html
+++ b/statics/posts.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>注册</title>
+<title>发帖</title>
 <script src="./files/js/jquery-2.1.4.min.js"></script>
 <link rel="stylesheet" href="./files/css/bootstrap.min.css">
 <script src="./files/js/bootstrap.min.js"></script>
