--- a/statics/index.html
+++ b/statics/index.html
@@ -22,7 +22,7 @@ po();
 function posts(p){
 return '<div class="panel panel-default">\
 <div class="panel-heading">\
-<p><strong>标题：'+p.title+'</strong><small class="pull-right">作者:'+p.author+'</small></p>\
+<p><strong>标题：'+p.title+'</strong><small>作者:'+p.author+'</small><small class="pull-right">'+(new Date()).setTime(p.time).toLocaleString()+'</small></p>\
 </div>\
 <div class="panel-body"><p>'+p.content+'</p>\
 </div>\
