--- a/statics/index.html
+++ b/statics/index.html
@@ -102,7 +102,7 @@ po();
 <label for="content"class="control-label">正文:</label>
 <textarea class="form-control" rows="4" id="content"></textarea>
 <br>
-<button class="btn btn-primary" onclick="post()">提交</button>
+<button class="btn btn-primary" onclick="post()" type="button">提交</button>
 
 </div>
 
