--- a/statics/index.html
+++ b/statics/index.html
@@ -54,7 +54,7 @@ content:$("#content").val(),
 pos:$("#pos").val(),
 alt:$("#alt").val()
 },function(data){
-if(data==ok){
+if(data=="ok"){
 $("#ps").html("");
 po();
 }
