--- a/statics/index.html
+++ b/statics/index.html
@@ -26,7 +26,7 @@ return '<div class="panel panel-default">\
 <div class="panel-heading">\
 <p><strong>标题：'+p.title+'</strong><small  class="pull-right">作者:'+p.author+'</small></p>\
 </div>\
-<div class="panel-body"><div>'+p.content+'</div>\
+<div class="panel-body"><div>'+p.content.replace(/\n/g,"<br>")+'</div>\
 </div>\
 <div class="panel-footer">\
 <p>地点:'+p.pos+' 经度:'+p.lon+' 纬度:'+p.lat+'<small class="pull-right">'+nd.toLocaleString()+'</small></p>\
