--- a/statics/admin.html
+++ b/statics/admin.html
@@ -22,11 +22,12 @@ po();
 function posts(p){
 nd=new Date();
 nd.setTime(p.register_time);
-return '<th>'+p.id+'</th><th>'+p.nick+'</th><th>'+p.email+'</th><th>'+p.phone'</th><th>'+p.type+'</th><th>'+p.type+'</th><th>'+nd+'</th>';
+return '<tr><td>'+p.uid+'</td><td>'+p.username+'</td><td>'+p.nick+'</td><td>'+p.email+'</td><td>'+p.phone+'</td><td>'+p.moto+'</td><td>'+p.type+'</td><td>'+nd+'</td></tr>';
 }
 function logout(){
 $.post("/logout",function(data){
-window.location.href="/login.html";});
+window.location.href="/login.html";
+});
 }
 function po(){
 $.get("/userlist",{page:1},function(data){
@@ -52,7 +53,7 @@ $("#tb").append(posts(e));
 </nav>
 	<div><br></div>
 <div class="col-sm-8 col-sm-offset-2">
-<table class="table-striped">
+<table class="table table-striped">
 <thead>
 <th>ID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th>
 </thead>
