--- a/statics/admin.html
+++ b/statics/admin.html
@@ -19,10 +19,17 @@ function ol(){
 ln();
 po();
 }
+function ct(id){
+$.post("/changtype",{id:id,newtype:$("#p"+id).val()},function(data){
+if(data=="ok"){
+po();
+}
+});
+}
 function posts(p){
 nd=new Date();
 nd.setTime(p.register_time);
-return '<tr><td>'+p.uid+'</td><td>'+p.username+'</td><td>'+p.nick+'</td><td>'+p.email+'</td><td>'+p.phone+'</td><td>'+p.moto+'</td><td>'+p.type+'</td><td>'+nd.toLocaleString()+'</td></tr>';
+return '<tr><td>'+p.uid+'</td><td>'+p.username+'</td><td>'+p.nick+'</td><td>'+p.email+'</td><td>'+p.phone+'</td><td>'+p.moto+'</td><td>'+p.type+'</td><td>'+nd.toLocaleString()+'</td><td><select id="p'+p.uid+'"><option value="banned">封禁</option><option value="normal">正常</option><option value="admin">管理员</option></select><button class="btn btn-primary" onclick="ct('+p.uid+')">确定</button></td></tr>';
 }
 function logout(){
 $.post("/logout",function(data){
@@ -55,7 +62,7 @@ $("#tb").append(posts(e));
 <div class="col-sm-8 col-sm-offset-2">
 <table class="table table-striped">
 <thead>
-<th>ID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th>
+<th>ID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th><th>将类型设为</th>
 </thead>
 <tbody id="tb">
 </tbody>
