--- a/statics/admin.html
+++ b/statics/admin.html
@@ -61,6 +61,7 @@ $("#tb").append(posts(e));
 </nav>
 	<div><br></div>
 <div class="col-sm-8 col-sm-offset-2">
+<div></div>
 <table class="table table-striped">
 <thead>
 <th>ID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th><th>将类型设为</th>
