--- a/statics/admin.html
+++ b/statics/admin.html
@@ -26,7 +26,7 @@ ln();
 function posts(p){
 nd=new Date();
 nd.setTime(p.register_time);
-return '<tr><td>'+p.uid+'</td><td>'+p.username+'</td><td>'+p.nick+'</td><td>'+p.email+'</td><td>'+p.phone+'</td><td>'+p.moto+'</td><td>'+p.type+'</td><td>'+nd.toLocaleString()+'</td><td><select id="p'+p.uid+'"><option value="banned">封禁</option><option value="normal">正常</option><option value="admin">管理员</option></select><button class="btn btn-primary" onclick="ct('+p.uid+')">确定</button></td></tr>';
+return '<tr><td>'+p.uid+'</td><td>'+p.username+'</td><td>'+p.nick+'</td><td>'+p.email+'</td><td>'+p.phone+'</td><td>'+p.moto+'</td><td>'+p.type+'</td><td>'+nd.toLocaleString()+'</td><td><select id="p'+p.uid+'"><option value="ban">封禁</option><option value="normal">正常</option><option value="admin">管理员</option></select><button class="btn btn-primary" onclick="ct('+p.uid+')">确定</button></td></tr>';
 }
 function logout(){
 $.post("/logout",function(data){
