--- a/statics/admin.html
+++ b/statics/admin.html
@@ -37,7 +37,7 @@ window.location.href="/login.html";
 function po(a){
 a=parseInt(a);
 pgs=a;
-$.get("/userlist",{page:a},function(data){
+$.get("/userlist",{page:a,s:$("#s").val()},function(data){
 if(data!="error"&&data!="fobidden"){
 $("#pg").html('\
 <ul class="pagination">\
@@ -77,9 +77,15 @@ po(pgs);
   </div>
 </nav>
 	<div><br></div>
-<div class="col-sm-8 col-sm-offset-2">
-
-<div id="pg"></div>
+<div class="col-sm-10 col-sm-offset-1">
+<div class="row">
+<div id="pg" class="col-sm-5"></div>
+<div class="form-inline col-sm-5">
+<div class="form-group">
+<label for="s" class="control-label">搜索用户:</label><input type="text" class="form-control" id="s"><button class="btn btn-primary" onclick="ol()">搜索</button>
+</div>
+</div>
+</div>
 <table class="table table-striped">
 <thead>
 <th>ID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th><th>将类型设为</th>
