--- a/statics/admin.html
+++ b/statics/admin.html
@@ -82,7 +82,7 @@ po(pgs);
 <div id="pg" class="col-sm-5"></div>
 <div class="form-inline col-sm-5">
 <div class="form-group">
-<label for="s" class="control-label">搜索用户:</label><input type="text" class="form-control" id="s"><button class="btn btn-primary" onclick="ol()">搜索</button>
+<label for="s" class="control-label">用户名/UID:</label><input type="text" class="form-control" id="s"><button class="btn btn-primary" onclick="ol()">搜索</button>
 </div>
 </div>
 </div>
