--- a/statics/admin.html
+++ b/statics/admin.html
@@ -79,10 +79,10 @@ po(pgs);
 	<div><br></div>
 <div class="col-sm-10 col-sm-offset-1">
 <div class="row">
-<div id="pg" class="col-sm-5"></div>
-<div class="form-inline col-sm-5">
-<div class="form-group">
-<label for="s" class="control-label">用户名/UID:</label><input type="text" class="form-control" id="s"><button class="btn btn-primary" onclick="ol()">搜索</button>
+<div id="pg" class="col-sm-4"></div>
+<div class="col-sm-4  col-sm-offset-2"><br>
+<div class="input-group">
+<input type="text" class="form-control" id="s" placeholder="用户名/UID"><span class="input-group-btn"><button class="btn btn-primary" onclick="ol()">搜索</button></span>
 </div>
 </div>
 </div>
