--- a/statics/admin.html
+++ b/statics/admin.html
@@ -44,7 +44,7 @@ $("#pg").html('\
 	<li><a href="#">&laquo;</a></li>\
     <li><a onclick="po('+(a-2)+')">'+(a-2)+'</a></li>\
     <li><a onclick="po('+(a-1)+')">'+(a-1)+'</a></li>\
-    <li><a onclick="po('+a+')">'+(a)+'</a></li>\
+    <li class="active"><a onclick="po('+a+')">'+(a)+'</a></li>\
     <li><a onclick="po('+(a+1)+')">'+(a+1)+'</a></li>\
     <li><a onclick="po('+(a+2)+')">'+(a+2)+'</a></li>\
     <li><a href="#">&raquo;</a></li>\
