--- a/statics/admin.html
+++ b/statics/admin.html
@@ -76,7 +76,6 @@ po(pgs);
     			
   </div>
 </nav>
-	<div><br></div>
 <div class="col-sm-10 col-sm-offset-1">
 <div class="row">
 <div id="pg" class="col-sm-5"></div>
@@ -88,7 +87,7 @@ po(pgs);
 </div>
 <table class="table table-striped">
 <thead>
-<th>ID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th><th>将类型设为</th>
+<th>UID</th><th>用户名</th><th>昵称</th><th>电邮</th><th>手机</th><th>签名</th><th>类型</th><th>注册时间</th><th>将类型设为</th>
 </thead>
 <tbody id="tb">
 </tbody>
