--- a/statics/baidumap.html
+++ b/statics/baidumap.html
@@ -17,7 +17,9 @@
 </head>  
  
 <body>  
-<div id="container"></div> 
+<div>
+<div id="container" style="width:500px;height:320px"></div> </div>
+
 <script type="text/javascript"> 
 var map = new BMap.Map("container");
 // 创建地图实例  
