--- a/statics/baidumap.html
+++ b/statics/baidumap.html
@@ -13,7 +13,7 @@
 </style>  
 
 <script src="http://api.map.baidu.com/api?v=1.4"></script>
-
+<script src="/map.js"></script>
 </head>  
  
 <body>  
