--- a/statics/map.html
+++ b/statics/map.html
@@ -30,11 +30,7 @@
             <script type="text/javascript">
 		window.onload=ol(); 
 		function ol(){
-                var map = new BMap.Map("container");
-                    // 创建地图实例  
-                    var point = new BMap.Point(116.404,39.915);
-                    // 创建点坐标  
-                    map.centerAndZoom(point, 15);
+                newMap("container");
 		}
                     // 初始化地图，设置中心点坐标和地图级别  
                     </script> 
@@ -43,7 +39,7 @@
 
         <div class="col-xs-6" class="pre-scrollable" style="overflow-y:auto">
             <h2 class="page-header">帖子列表</h2>
-            <div id="list"><p>aaaaaa</p></div> 
+            <div id="list"></div> 
         </div>
 	</div>
 
