--- a/statics/index.html
+++ b/statics/index.html
@@ -79,6 +79,7 @@
         },function(data){
         if(data=="ok"){
         $("#ps").html("");
+		mclear();
         po();
         }
         });
