--- a/statics/me.html
+++ b/statics/me.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title id="title">我</title>
+<title id="title">用户信息</title>
 <script src="/files/js/jquery-2.1.4.min.js"></script>
 <link rel="stylesheet" href="/files/css/bootstrap.min.css">
 <script src="/files/js/bootstrap.min.js"></script>
@@ -25,8 +25,8 @@ window.location.href="/login.html";
 				dataa=JSON.parse(dataa);
 				$("#uid").html(dataa.uid);
 				$("#un").html(dataa.username);
-				$("#nk").html(dataa.nick);
-				$("#em").html(dataa.email);
+				$("#nk").val(dataa.nick);
+				$("#em").val(dataa.email);
 				$("#tp").html(dataa.type);
 				$("#rt").html(new Date(dataa.register_time).toLocaleString());
 			}else{
@@ -43,6 +43,13 @@ window.location.href="/login.html";
 		function logout(){
 		$.post("/logout",function(data){
 				window.location.href="/";
+		});
+	}
+	function chinfo(){
+		$.post("/infos",{email:$("#em").val(),nick:$("#nk").val()},function(data){
+			if(data==ok){
+				load();
+			}
 		});
 	}
 	</script>
@@ -64,12 +71,13 @@ window.location.href="/login.html";
 				  <tr><th>项目</th><th>值</th></tr>
 				<tr><th>UID</th><td id="uid"></td></tr>
 				  <tr><th>用户名</th><td id="un"></td></tr>
-				  <tr><th>昵称</th><td id="nk"></td></tr>
-				  <tr><th>电邮</th><td id="em"></td></tr>
+				  <tr><th>昵称</th><td><input id="nk" type="text"/></td></tr>
+				  <tr><th>电邮</th><td><input id="em" type="text"/></td></tr>
 				<tr><th>类型</th><td id="tp"></td></tr>
 				  <tr><th>注册时间</th><td id="rt"></td></tr>
 				  
 			  </table>
+			<button onclick="chinfo()" class="btn btn-primary">更改个人信息</button>
    
   </div>
 	</div>
