--- a/statics/index.html
+++ b/statics/index.html
@@ -143,7 +143,7 @@
                   <br>
                   <div class="form-inline">
                   <div class="form-group">
-                  <label for="alt"class="control-label">高度:</label><input type="text" class="form-control" id="alt">
+                  <label for="alt"class="control-label">高度:</label><input type="text" class="form-control" id="alt" value="0">
                   </div>
                   <div class="form-group">
                   <label for="pos"class="control-label">地点:</label><input type="text" class="form-control" id="pos">
