--- a/statics/me.html
+++ b/statics/me.html
@@ -52,6 +52,58 @@ window.location.href="/login.html";
 			}
 		});
 	}
+	
+	function checkstr(Str)
+    {
+      //var Str=;
+      var str1="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
+      var i=0;
+      for (i=0; i<Str.length;i++) {
+         var onechar=Str.substring(i,i+1);
+         if (!(str1.indexOf(onechar)!= -1)){
+               return false;
+            }
+       }
+}
+function reg(){
+$("#warn").html("");
+$("#ud").removeClass("has-error");
+$("#pd").removeClass("has-error");
+$("#cd").removeClass("has-error");
+var check=0;
+if(checkstr($("#npw").val())==false){
+$("#warn").append('<div class="alert alert-danger" role="alert">密码只能包含大小写字母以及阿拉伯数字!</div>');
+check+=1;
+$("#pd").addClass("has-error");
+}
+if($("#npw").val()!=$("#cnpw").val()){
+	$("#warn").append('<div class="alert alert-danger" role="alert">确认密码应与密码一致!</div>');
+check+=1;
+$("#cd").addClass("has-error");
+}
+if($("#npw").val().length<6){
+	$("#warn").append('<div class="alert alert-danger" role="alert">密码应在六位以上!</div>');
+check+=1;
+$("#pd").addClass("has-error");
+}
+if(check==0){
+$.post('/passwd',{p:$("#opw").val(),np:$("#npw").val()},function(data){
+	if(data=="pwerr"){
+		$("#warn").append('<div class="alert alert-danger" role="alert">原密码错误!</div>');
+		$("#opd").addClass("has-error");
+	}
+	if(data=="error"){
+		$("#warn").append('<div class="alert alert-danger" role="alert">服务器检验错误!请检查输入是否有非法字符!</div>');
+	}
+	if(data=="ok"){
+		 $("#warn").append('<div class="alert alert-success" role="alert">更改成功!</div>');
+		window.location.href="/me.html";
+	}
+});
+
+
+}
+}
 	</script>
 <body>
 	<div><br><br></div>
@@ -77,8 +129,26 @@ window.location.href="/login.html";
 				  <tr><th>注册时间</th><td id="rt"></td></tr>
 				  
 			  </table>
-			<button onclick="chinfo()" class="btn btn-primary">更改个人信息</button>
-   
+			<button onclick="chinfo()" class="btn btn-primary">更改个人信息</button><br>
+			<h1>更改密码</h1>
+   			<div>
+  <div class="form-group" id="opd">
+    <label for="exampleInputPassword1">原密码</label>
+    <input type="password" class="form-control" id="opw" placeholder="Old Password">
+  </div>
+  <div class="form-group" id="pd">
+    <label for="exampleInputPassword1">新密码</label>
+    <input type="password" class="form-control" id="npw" placeholder="New Password">
+  </div>
+  <div class="form-group" id="cd">
+    <label for="exampleInputPassword1">确认新密码</label>
+    <input type="password" class="form-control" id="cnpw" placeholder="Confirm Password">
+  </div>
+
+  <button class="btn btn-primary" onclick="reg()">确认更改密码</button>
+  <br><br>
+  <div id="warn"></div>
+</div>
   </div>
 	</div>
 	</div>
