--- a/statics/index.html
+++ b/statics/index.html
@@ -75,7 +75,7 @@
         title:$("#title").val(),
         content:$("#content").val(),
         pos:$("#pos").val(),
-        alt:$("#alt").val()
+        etime:Date.parse(new Date($("#alt").val()+" 00:00:00"))
         },function(data){
         if(data=="ok"){
         $("#ps").html("");
@@ -143,7 +143,7 @@
                   <br>
                   <div class="form-inline">
                   <div class="form-group">
-                  <label for="alt"class="control-label">高度:</label><input type="text" class="form-control" id="alt" value="0">
+                  <label for="alt"class="control-label">时间:</label><input type="date" class="form-control" id="alt" value="0">
                   </div>
                   <div class="form-group">
                   <label for="pos"class="control-label">地点:</label><input type="text" class="form-control" id="pos">
