--- a/statics/index.html
+++ b/statics/index.html
@@ -46,7 +46,7 @@
         nd.setTime(p.time);
         return '<div class="panel panel-default">\
         <div class="panel-heading">\
-        <p><strong>标题：'+p.title+'</strong><small  class="pull-right">作者:'+p.author+'</small></p>\
+        <p><strong>标题：'+p.title+'</strong><small  class="pull-right">作者:'+p.nick+'</small></p>\
         </div>\
         <div class="panel-body"><div>'+p.content.replace(/\n/g,"<br>")+'</div>\
         </div>\
