--- a/statics/index.html
+++ b/statics/index.html
@@ -112,8 +112,7 @@
             </a>
           </div>
           <div class=" col-sm-4 text-center navbar-inner"></div>
-                      <div class="text-center navbar-inner col-sm-1 col-offset-2"><h4><a class="navbar-link" href="./me.html" id="h"></a></h4> </div><div class="text-center navbar-inner col-sm-1"><button class="btn btn-default navbar-btn " onclick="logout()">登出</button></div>
-                      
+          <ul class="nav navbar-nav navbar-right"><li><a href="./me.html" id="h" class="navbar-link"></a></li><li><button class="btn btn-default navbar-btn " onclick="logout()">登出</button></li></ul>            
         </div>
       </nav>
     
