--- a/statics/posts.html
+++ b/statics/posts.html
@@ -63,18 +63,17 @@ po();
 </script>
 </head>
 <body>
-<nav class="navbar navbar-default ">
-  <div class="container-fluid">
-    <div class="navbar-header  col-xs-4 col-sm-4">
-      <a class="navbar-brand" href="/">
-        <img alt="THE WORLD" src="...">
-      </a>
-    </div>
-    <div class=" col-xs-6 col-sm-6  text-center navbar-inner"></div>
-    			<div class="col-sm-offset-6 col-sm-2 text-center navbar-inner"><a class="navbar-link" href="./me.html" id="h"></a> <button class="btn btn-default navbar-btn " onclick="logout()">登出</button></div>
-    			
-  </div>
-</nav>
+      <nav class="navbar navbar-default ">
+        <div class="container-fluid">
+          <div class="navbar-header col-sm-4">
+            <a class="navbar-brand" href="/">
+              <img alt="THE WORLD" src="...">
+            </a>
+          </div>
+          <div class=" col-sm-4 text-center navbar-inner"></div>
+          <ul class="nav navbar-nav navbar-right"><li><a href="./me.html" id="h" class="navbar-link"></a></li><li><button class="btn btn-default navbar-btn " onclick="logout()">登出</button></li></ul>            
+        </div>
+      </nav>
 	<div><br></div>
 <div class="col-sm-8 col-sm-offset-2">
 <form>
